--- a/index.html
+++ b/index.html
@@ -4,29 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script href="script.js" defer></script>
     <title>Etch-A-Sketch</title>
 </head>
 <body>
     <div class="header">
-        <button class="brush-tool">
+        <a href="#" class="brush-tool">
             <img src="images/brushtool.png">
-        </button>
+        </a>
         <h1 class="title">
             Etch-A-Sketch
-        </p>
-        <button class="brush-tool">
+        </h1>
+        <a href="#" class="brush-tool">
             <img src="images/erasertool.png">
-        </button>
+        </a>
     </div>
     <div class="content">
-        <div class="grid">
-            
-        </div>
+        Content
     </div>
     <div class="footer">
         <p class="text">made by <a href="https://github.com/e-meyer">e-meyer</a></p>
     </div>
+
 </body>
 </html>
