--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script href="script.js" defer></script>
+    <script src="script.js" defer></script>
     <title>Etch-A-Sketch</title>
 </head>
 <body>
@@ -24,7 +24,9 @@
         </a>
     </div>
     <div class="content">
-        Content
+        <canvas id="canvas">
+            
+        </canvas>
     </div>
     <div class="footer">
         <p class="text">made by <a href="https://github.com/e-meyer">e-meyer</a></p>
