Add basic javascript and changed background image

--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
             <img src="images/erasertool.png">
         </a>
     </div>
-    <div class="content">
-        <canvas id="canvas">
-            
-        </canvas>
+    <div class="grid">
+        
     </div>
     <div class="footer">
         <p class="text">made by <a href="https://github.com/e-meyer">e-meyer</a></p>
