Brush tool works but setting max width in grid

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
             <img src="images/erasertool.png">
         </a>
     </div>
-    <div class="grid">
-        
+    <div class="content">
+        <div class="grid">
+            
+        </div>
     </div>
     <div class="footer">
         <p class="text">made by <a href="https://github.com/e-meyer">e-meyer</a></p>
