Add brush and eraser functionality

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 </head>
 <body>
     <div class="header">
-        <a href="#" class="brush-tool">
+        <a href="#" class="brush-tool selected">
             <img src="images/brushtool.png">
         </a>
         <h1 class="title">
             Etch-A-Sketch
         </h1>
-        <a href="#" class="brush-tool">
+        <a href="#" class="eraser">
             <img src="images/erasertool.png">
         </a>
     </div>
