Add preferences bar

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         </a>
     </div>
     <div class="content">
+        <div class="preferences">
+            <p class="text">Grid size</p>
+            
+        </div>
         <div class="grid">
             
         </div>
