Add grid slider to change grid size

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="content">
         <div class="preferences">
             <p class="text">Grid size</p>
-            
+            <input type="range" min="1" max="100" value="16" class="slider" id="myRange">
         </div>
         <div class="grid">
             
