--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </div>
     <div class="content">
         <div class="preferences">
-            <p class="text">Grid size</p>
-            <input type="range" min="1" max="100" value="16" class="slider" id="myRange">
+            <span class="grid-size"></span>
+            <input id="slider" type="range" min="1" max="100" value="16">
         </div>
         <div class="grid">
             
