--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="content">
         <div class="preferences">
-            <input class="color-picker" type="color" id="head" name="head" value="#ff0000">
+            <input class="color-picker" type="color" id="head" name="head" value="#ebebeb">
             <span class="grid-size"></span>
             <input id="slider" type="range" min="1" max="100" value="16">
             <button class="clear">Clear</button>
